--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="hint.css" />
 </head>
 <body>
  <div class="parallax">
@@ -25,10 +26,10 @@
 </div>
 
 <div class="social">
-    <box-icon name='youtube' type='logo' ></box-icon>
-    <box-icon name='github' type='logo' ></box-icon>
-    <img src="itch.svg" alt="">
-    <img src="c3.png" style="filter: invert(1);" alt="">
+    <img name='youtube' type='logo' class="hint--small" aria-label="Youtube" src="assets/youtube.svg">
+    <img name='github' type='logo' class="hint--small" aria-label="Github" src="assets/github.svg">
+    <img src="assets/itch.svg" alt="" class="hint--small" aria-label="Itch">
+    <img src="assets/c3.png" style="filter: invert(1);" alt="" class="hint--small" aria-label="Construct 3">
 </div>
  </div>
 </body>
